--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "gulp-postcss": "^8.0.0",
     "gulp-watch": "^5.0.1",
     "postcss-import": "^12.0.1",
+    "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.2",
     "postcss-simple-vars": "^5.0.2"
+  },
+  "dependencies": {
+    "postcss-hexrgba": "^1.0.1"
   }
 }
