Finished secondary nav functionality with active link color change (not responsive yet)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "postcss-hexrgba": "^1.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "waypoints": "^4.0.1"
   }
 }
